--- a/style.css
+++ b/style.css
@@ -1,16 +1,42 @@
 html {
-    background-color: black;
+    background-color: lightgrey;
 }
 
 #container {
-    width:1000px;
+    width: 1000px;
     height:1000px;
+    max-width:1000px;
+    max-height:1000px;
     background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    display: grid;
+    grid-template-columns: repeat(numCols, 1fr); 
 
-slider{
-    color: white;
 }
+h1{
+    display:flex;
+    justify-content: center;
+    color: black;
+}
+.min-value, .max-value {
+    color: black;
+    display: inline-block;
+    width: 40px;
+    text-align: center;
+  }
+  .sliding{
+    display:flex;
+    margin-top: 15px;
+    }
+  .slider {
+    width: 200px;
+    display: inline-block;
+    margin: 0 10px;
+  }
+  
+  .cell{
+    border: 1px hidden;
+  }
+
+  .sliderlabel{
+    color: black;
+  }
