--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h1, .min-value, .max-value, .sliderlabel{
 }
 
 
-#container > .colored{
+#container .colored{
   background-color: currentColor;
 }
 
